tests/errors/recursive-macro-definition.spcasm

macro something
  mov a,#4
  macro something_else
	mov x,#4
  endmacro
endmacro
